# k8sbot

./: README.md  __main__.py  kubernetes_client.py  ngrok.yml  pyproject.toml  server.py  slack_bot.py  task.json
